--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.scss
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.scss
@@ -19,7 +19,7 @@
 @import '../../../../scss/_variables.scss';
 
 .mat-spinner-color::ng-deep svg circle{
-    stroke: #FFFFFF !important;
+    stroke: var(--color-accent) !important;
 }
 
 .pipeline-cache-progress {
@@ -66,8 +66,12 @@
 
 .pipeline-assembly-options {
     padding-left: 5px;
-    color: white;
+    border: 1px solid var(--color-bg-3);
     //background: #f6f6f6;
+}
+
+.assembly-border {
+    border: 1px solid var(--color-bg-3);
 }
 
 .jtk-surface-nopan {
@@ -86,6 +90,15 @@
     box-shadow: 0.175em 0.175em 0 0 rgba(15, 28, 63, 0.125);
     border-radius: 10px;
 
+}
+
+.pipeline-validation-hint {
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    z-index: 10;
+    background: var(--color-bg-1);
+    box-shadow: 0.175em 0.175em 0 0 rgba(15, 28, 63, 0.125);
 }
 
 .pan-control {
@@ -151,13 +164,15 @@
 }
 
 .assembly-options-divider {
-    width: 2px;
+    width: 1px;
     height: 70%;
     margin-left: 10px;
     margin-right: 10px;
-    background: #b8b8b8;
+    background: var(--color-bg-3);
 }
 
 .color-warn {
     color: var(--color-warn);
 }
+
+
