--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -116,7 +116,7 @@
 .page-container-nav {
   line-height:24px;
   height: 50px;
-  border-bottom:1px solid var(--color-tab-border);
+  border-bottom:2px solid var(--color-bg-3);
 }
 
 .text-center {
