[STREAMPIPES-510] Refactor tutorial

--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
@@ -45,6 +45,7 @@
                  fxLayout="column"
                  class="panel-outer">
                 <div class="panel-header"
+                     id="panel-{{availableType.filters[0]}}"
                      fxLayout="row"
                      fxLayoutAlign="start center"
                      [ngStyle]="{background: 'var(--color-bg-2)'}">
