--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
@@ -15,36 +15,35 @@
   ~ limitations under the License.
   ~
   -->
-<div fxFlex="100" fxLayout="column" class="border">
+<div fxFlex="100" fxLayout="column" class="border" style="width: 250px;">
     <div class="editorIconStandOptions sp-bg-lightgray page-container-nav" style="padding:0px;">
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" style="padding-left:5px;">
-            <div fxLayoutAlign="start center" fxLayout="row">
-                <div fxLayout="row" fxLayoutAlign="start center">
-                    <i class="material-icons sp-accent">search</i>
-                    <mat-form-field floatLabel="never" color="accent">
-                        <mat-label>Find element</mat-label>
-                        <input matInput
-                               type="text"
-                               (keyup)="makeDraggable()"
-                               placeholder="Find element"
-                               [(ngModel)]="elementFilter">
-                        <button *ngIf="elementFilter"
-                                matSuffix
-                                mat-icon-button
-                                aria-label="Find element" (click)="clearInput()">
-                            <mat-icon>close</mat-icon>
-                        </button>
-                    </mat-form-field>
-                    <button mat-button
+            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
+                <i class="material-icons sp-accent">search</i>
+                <mat-form-field floatLabel="never" color="accent" class="search-field">
+                    <mat-label>Find element</mat-label>
+                    <input matInput
+                           type="text"
+                           (keyup)="makeDraggable()"
+                           placeholder="Find element"
+                           [(ngModel)]="elementFilter">
+                    <button *ngIf="elementFilter"
+                            matSuffix
                             mat-icon-button
-                            color="accent"
-                            (click)="startCreatePipelineTour()"
-                            [matTooltip]="'Tutorial'" style="margin-right: 5px;">
-                        <i class="material-icons">
-                            school
-                        </i>
+                            aria-label="Find element" (click)="clearInput()">
+                        <mat-icon>close</mat-icon>
                     </button>
-                </div>
+                </mat-form-field>
+                <span fxFlex></span>
+                <button mat-button
+                        mat-icon-button
+                        color="accent"
+                        (click)="startCreatePipelineTour()"
+                        [matTooltip]="'Tutorial'" style="margin-right: 5px;">
+                    <i class="material-icons">
+                        school
+                    </i>
+                </button>
             </div>
         </div>
     </div>
