[test] Fix dashboard test

--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   ~
   -->
-<div fxFlex="100" fxLayout="column" class="border" style="width: 250px;">
+<div fxFlex="100" fxLayout="column" class="border" style="width: 250px;" [attr.data-cy]="'sp-pipeline-element-selection'">
     <div class="editorIconStandOptions sp-bg-lightgray page-container-nav" style="padding:0px;">
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" style="padding-left:5px;">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
