--- a/ui/src/app/profile/components/general/general-profile-settings.component.html
+++ b/ui/src/app/profile/components/general/general-profile-settings.component.html
@@ -19,25 +19,34 @@
 <div fxLayout="row" class="page-container-padding">
     <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" *ngIf="profileLoaded">
         <sp-split-section title="Main Settings" subtitle="Manage your basic profile settings here.">
-            <mat-form-field fxFlex color="accent">
-                <mat-label>Email</mat-label>
-                <input [(ngModel)]="userData.username" matInput type="email" name="email" disabled/>
-                <mat-hint>Your mail address can't be changed currently.</mat-hint>
-            </mat-form-field>
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <span>{{userData.username}}</span>
+                <button mat-button
+                        mat-raised-button
+                        color="accent"
+                        class="ml-15"
+                        (click)="openChangeEmailDialog()">Change email
+                </button>
+            </div>
             <mat-form-field fxFlex color="accent">
                 <mat-label>Full Name</mat-label>
                 <input [(ngModel)]="userData.fullName" matInput/>
             </mat-form-field>
-            <div>
+            <div fxLayout="row" fxLayoutAlign="start center">
                 <button mat-button mat-raised-button color="accent"
                         (click)="saveProfileSettings()">
                     Update profile
+                </button>
+                <button mat-button mat-raised-button color="accent" class="ml-15"
+                        (click)="openChangePasswordDialog()">
+                    Change password
                 </button>
             </div>
         </sp-split-section>
         <mat-divider></mat-divider>
         <div fxLayout="row" fxFlex="100" class="mt-30">
-            <sp-split-section title="Appearance" subtitle="Change the appearance of your {{appConstants.APP_NAME}} installation">
+            <sp-split-section title="Appearance"
+                              subtitle="Change the appearance of your {{appConstants.APP_NAME}} installation">
                 <label id="radio-group-label">Color Scheme</label>
                 <mat-radio-group [(ngModel)]="darkMode"
                                  aria-labelledby="radio-group-label"
