--- a/ui/src/app/profile/dialog/change-password/change-password-dialog.component.scss
+++ b/ui/src/app/profile/dialog/change-password/change-password-dialog.component.scss
@@ -16,20 +16,8 @@
  *
  */
 
-.title-section {
-  width: 300px;
-}
+@import '../../../../scss/sp/sp-dialog.scss';
 
-.appearance-radio-group {
-  display: flex;
-  flex-direction: column;
-  margin: 15px 0;
-}
-
-.appearance-radio-button {
-  margin: 5px;
-}
-
-.ml-15 {
-  margin-left: 15px;
+.mt-20 {
+  margin-top: 20px;
 }
