--- a/ui/src/app/login/components/startup/startup.component.html
+++ b/ui/src/app/login/components/startup/startup.component.html
@@ -30,7 +30,7 @@
         </div>
 
         <div fxFlex="100" fxLayoutAlign="center center">
-            <mat-progress-bar style="margin-top:10px;width:800px;" [mode]="'determinate'" value="{{progress}}"></mat-progress-bar>
+            <mat-progress-bar class="sp-progress" mode="determinate" [value]="progress" color="accent"></mat-progress-bar>
         </div>
     </div>
 
