--- a/ui/src/app/data-explorer/components/widgets/distribution-chart/config/distribution-chart-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/distribution-chart/config/distribution-chart-widget-config.component.html
@@ -26,6 +26,7 @@
               (selectionChange)="updateDisplayType($event.value)">
           <mat-option [value]="'histogram'">Histogram</mat-option>
           <mat-option [value]="'pie'">Pie</mat-option>
+          <mat-option [value]="'heatmap'">Value Heatmap</mat-option>
       </mat-select>
   </mat-form-field>  
   
@@ -52,6 +53,14 @@
           <mat-option [value]="0.01">0.01</mat-option>
       </mat-select>
   </mat-form-field>
+
+    <div *ngIf="currentlyConfiguredWidget.visualizationConfig.displayType === 'heatmap'">
+        <mat-form-field fxFlex="100" color="accent">
+            <mat-label>
+                <span>Resolution</span></mat-label>
+            <input [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.resolution" matInput (input)="onResolutionChange($event.target.value)">
+        </mat-form-field>
+    </div>
 
 </div>
 
