--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.html
@@ -146,4 +146,7 @@
                 style="margin-right:10px;margin-bottom: 15px;">Add Data Source
         </button>
     </div>
+    <div class="p-10">
+        <mat-checkbox [(ngModel)]="dataConfig.ignoreTooMuchDataWarning">Deactivate browser overload warning</mat-checkbox>
+    </div>
 </div>
