--- a/ui/deployment/sp-theme.scss
+++ b/ui/deployment/sp-theme.scss
@@ -23,7 +23,7 @@
  *
  */
 
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 @import '../variables';
 
 @include mat-core();
