--- a/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
+++ b/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
@@ -24,8 +24,9 @@
     <div class="sp-blue-border padding" style="padding: 15px; margin-bottom: 2%;">
         <div fxLayoutAlign="center" fxLayout="column" fxFlex="100">
             <mat-form-field color="accent">
-                <input matInput id="input-AdapterName" [ngModelOptions]="{standalone: true}" placeholder="Adapter Name"
-                       [(ngModel)]="adapterDescription.name" data-cy="sp-adapter-name">
+                <input formControlName="adapterName"
+                       matInput id="input-AdapterName" placeholder="Adapter Name"
+                       data-cy="sp-adapter-name" required>
             </mat-form-field>
             <mat-form-field color="accent">
                 <input matInput id="input-AdapterDescription" [ngModelOptions]="{standalone: true}"
@@ -66,6 +67,7 @@
 
             <!-- Start pipeline template to store raw events in data lake -->
             <mat-checkbox [(ngModel)]="saveInDataLake"
+                          (change)="findDefaultTimestamp($event)"
                           [ngModelOptions]="{standalone: true}"
                           data-cy="sp-store-in-datalake">
                 Store in Datalake
@@ -89,7 +91,7 @@
         <button class="mat-basic" mat-raised-button (click)="removeSelection()">Cancel</button>
         <button style="margin-left:10px;" class="mat-basic stepper-button" mat-raised-button (click)="goBack()">Back
         </button>
-        <button [disabled]="startAdapterSettingsFormValid" mat-raised-button id="button-startAdapter"
+        <button [disabled]="!(startAdapterSettingsFormValid)" mat-raised-button id="button-startAdapter"
                 color="accent" (click)="startAdapter()" mat-button style="margin-left:10px;">
             Start Adapter
         </button>
