[hotfix] Fix form validation for single value selection

--- a/ui/src/app/core-ui/static-properties/static-property.component.html
+++ b/ui/src/app/core-ui/static-properties/static-property.component.html
@@ -91,6 +91,7 @@
             <sp-static-one-of-input
                     *ngIf="isOneOfStaticProperty(staticProperty) && !isRuntimeResolvableOneOfStaticProperty(staticProperty)"
                     (inputEmitter)="valueChange($event)"
+                    [parentForm]="parentForm"
                     [staticProperty]="staticProperty">
             </sp-static-one-of-input>
 
