[STREAMPIPES-528] Improve support for images in data explorer

--- a/ui/src/app/core-ui/image/components/image-bar/image-bar-preview/image-bar-preview.component.html
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar-preview/image-bar-preview.component.html
@@ -16,12 +16,4 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column">
-
-    <h5>Image Field</h5>
-    <sp-select-property [availableProperties]="imageFields"
-                        [selectedProperty]="currentlyConfiguredWidget.visualizationConfig.selectedField"
-                        (changeSelectedProperty)="setSelectedImageProperty($event)">
-    </sp-select-property>
-
-</div>
+<img [ngClass]="focus ? 'imagePreview imageFocus' : 'imagePreview'" [style.height.px]="imagePreviewHeight" *ngIf="showImage" [src]="imagePath">
