--- a/ui/src/app/core-ui/image/components/image-bar/image-bar-preview/image-bar-preview.component.scss
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar-preview/image-bar-preview.component.scss
@@ -6,47 +6,23 @@
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
  */
 
-import { Component, Input, OnInit } from '@angular/core';
-import { SafeUrl } from '@angular/platform-browser';
-import { Observable } from 'rxjs';
-
-@Component({
-  selector: 'sp-image-viewer',
-  templateUrl: './image-viewer.component.html',
-  styleUrls: ['./image-viewer.component.css']
-})
-export class ImageViewerComponent implements OnInit {
-
-  @Input()
-  public imagesRoutes: Observable<SafeUrl>[];
-
-  @Input()
-  public canvasHeight = 500;
-
-  @Input()
-  public canvasWidth = 800;
-
-  @Input()
-  public imagePreviewHeight = 65;
-
-
-  public imagesIndex = 0;
-
-  constructor() {}
-
-  handleImageIndexChange(index) {
-    this.imagesIndex = index;
-  }
-
-  ngOnInit(): void {
-  }
+.imagePreview {
+  height: 65px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
+
+.imageFocus {
+  border: 3px solid #39b54a
+}
+
