--- a/ui/src/app/core-ui/image/components/image-bar/image-bar.component.html
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar.component.html
@@ -22,25 +22,45 @@
     <button mat-icon-button (click)="goToStart()"> <mat-icon>skip_previous</mat-icon></button>
     <button mat-icon-button (click)="nextImage()"> <mat-icon>keyboard_arrow_left</mat-icon></button>
 
-<!--    <div fxLayout="row" fxLayoutAlign="center center"  class="imageBar">-->
-<!--        <div fxFlex="40" fxLayoutAlign="end center">-->
-<!--            <img class="imagePreview" [style.height.px]="imagePreviewHeight" *ngIf="selectedIndex >= 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 2])}}" (click)="changeImage(selectedIndex - 2)">-->
-<!--            <img class="imagePreview" [style.height.px]="imagePreviewHeight" *ngIf="selectedIndex >= 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 1])}}" (click)="changeImage(selectedIndex - 1)">-->
-<!--        </div>-->
+    <div fxLayout="row" fxLayoutAlign="center center"  class="imageBar">
+        <div fxFlex="40" fxLayoutAlign="end center">
+            <sp-image-bar-preview
+                    [imagePreviewHeight]="imagePreviewHeight"
+                    [imageSrc]="_imageRoutes[selectedIndex - 2]"
+                    *ngIf="selectedIndex >= 2"
+                    (click)="changeImage(selectedIndex - 2)"></sp-image-bar-preview>
+            <sp-image-bar-preview
+                    [imagePreviewHeight]="imagePreviewHeight"
+                    [imageSrc]="_imageRoutes[selectedIndex - 1]"
+                    *ngIf="selectedIndex >= 1"
+                    (click)="changeImage(selectedIndex - 1)"></sp-image-bar-preview>
+        </div>
 
-<!--        <div fxFlex="20">-->
-<!--            <div fxLayout="row" fxLayoutAlign="center">-->
-<!--            <img class="imagePreview imageFocus" [style.height.px]="imagePreviewHeight" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex])}}" (click)="changeImage(selectedIndex)">-->
-<!--            </div>-->
-<!--        </div>-->
+        <div fxFlex="20">
+            <div fxLayout="row" fxLayoutAlign="center">
+                <sp-image-bar-preview
+                        [imagePreviewHeight]="imagePreviewHeight"
+                        [imageSrc]="_imageRoutes[selectedIndex]"
+                        [focus]="true"
+                        (click)="changeImage(selectedIndex)"></sp-image-bar-preview>
+             </div>
+        </div>
 
-<!--        <div fxFlex="40">-->
-<!--            <div fxLayout="row" fxLayoutAlign="start center">-->
-<!--                <img class="imagePreview" [style.height.px]="imagePreviewHeight" *ngIf="selectedIndex < maxImages - 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 1])}}" (click)="changeImage(selectedIndex + 1)">-->
-<!--                <img class="imagePreview" [style.height.px]="imagePreviewHeight" *ngIf="selectedIndex < maxImages - 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 2])}}" (click)="changeImage(selectedIndex + 2)">-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+        <div fxFlex="40">
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <sp-image-bar-preview
+                        [imagePreviewHeight]="imagePreviewHeight"
+                        [imageSrc]="_imageRoutes[selectedIndex + 1]"
+                        *ngIf="selectedIndex < maxImages - 1"
+                        (click)="changeImage(selectedIndex + 1)"></sp-image-bar-preview>
+                <sp-image-bar-preview
+                        [imagePreviewHeight]="imagePreviewHeight"
+                        [imageSrc]="_imageRoutes[selectedIndex + 2]"
+                        *ngIf="selectedIndex < maxImages - 2"
+                        (click)="changeImage(selectedIndex + 2)"></sp-image-bar-preview>
+              </div>
+        </div>
+    </div>
 
 
     <button mat-icon-button (click)="previousImage()"> <mat-icon>keyboard_arrow_right</mat-icon></button>
